chore: `.toList()` to `.collect(Collectors.toList())`